--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="/imagens/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="src/imagens/favicon.ico" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/responsivo.css">
 
     <title>Super Mario Bros</title>
 </head>
@@ -17,29 +21,37 @@
 
     <div class="fundo__video">
         <video class="video" autoplay loop muted>
-            <source src="./video-mario.mp4" type="video/mp4">
+            <source src="src/video/video-mario.mp4" type="video/mp4">
         </video>
     </div>
 
     <header class="cabecalho">
         <a href="">
-            <img src="./imagens/logo-chapeu-mario.png" alt="Logo chapéu do Mario">
+            <img src="src/imagens/logo-chapeu-mario.png"  class="logo" alt="Logo chapéu do Mario">
         </a>
         <nav>
             <ul class="menu">
-                <li>Home</li>
-                <li>Detalhes</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Detalhes</a></li>
             </ul>
         </nav>
     </header>
     <main class="container">
         <div class="informacoes">
-            <img src="/imagens/titulo.png" class="imagem__titulo" alt="Imagem do título do filme">
+            <img src="src/imagens/titulo.png" class="imagem__titulo" alt="Imagem do título do filme">
             <p class="descricao">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam quisquam porro numquam aperiam doloremque quae dolorum nemo, reprehenderit quaerat sint eaque adipisci aspernatur, officiis in libero maiores debitis. Omnis, laboriosam!
             </p>
+            
             <button class="botao__trailer">Veja o trailer</button>
         </div>
-        <img class="mario" src="/imagens/super-mario-chars.png" alt="">
+        <img class="mario" src="src/imagens/super-mario-chars.png" alt="">
+
+        <div class="modal">
+            <div class="conteudo__modal">
+                <span class="fechar__modal">x</span>
+                <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/Cb4WV4aXBpk" title="Trailer oficial" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+            </div>
+        </div>
     </main>
 </body>
 </html>
